[gd_scene load_steps=15 format=3 uid="uid://dgm4e3dj1l320"]

[ext_resource type="Texture2D" uid="uid://gjijdcmfbxj8" path="res://tile_1.tres" id="1_3lpjf"]
[ext_resource type="Texture2D" uid="uid://f10p5ta4s45s" path="res://tile_2.tres" id="2_isj61"]
[ext_resource type="Script" path="res://TileMap.gd" id="3_jxprg"]
[ext_resource type="Script" path="res://Robot.gd" id="4_ni6ue"]
[ext_resource type="PackedScene" uid="uid://buh0ugmmn3l7b" path="res://controls.tscn" id="5_tmyyi"]
[ext_resource type="PackedScene" uid="uid://8x0gkjrq1m5w" path="res://character.tscn" id="5_v0msi"]
[ext_resource type="Texture2D" uid="uid://2irxnruutj1k" path="res://wall.tres" id="7_c3hif"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tmxr5"]
texture = ExtResource("1_3lpjf")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mnv16"]
texture = ExtResource("2_isj61")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_yw6ll"]
sources/1 = SubResource("TileSetAtlasSource_mnv16")
sources/0 = SubResource("TileSetAtlasSource_tmxr5")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_daeur"]
texture = ExtResource("7_c3hif")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_1ll3x"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_daeur")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlo6i"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ntqp"]

[node name="Main" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_yw6ll")
format = 2
layer_0/tile_data = PackedInt32Array(262148, 1, 0, 262149, 1, 0, 327685, 1, 0, 327684, 1, 0, 327683, 1, 0, 262147, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, 393222, 1, 0, 393221, 1, 0, 393220, 1, 0, 393219, 1, 0, 393218, 1, 0, 327682, 1, 0, 262146, 1, 0, 196610, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, 393223, 1, 0, 458759, 1, 0, 458758, 1, 0, 458757, 1, 0, 458756, 1, 0, 458755, 1, 0, 458754, 1, 0, 458753, 1, 0, 393217, 1, 0, 327681, 1, 0, 262145, 1, 0, 196609, 1, 0, 131073, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 1, 0, 458760, 1, 0, 524296, 1, 0, 524295, 1, 0, 524294, 1, 0, 524293, 1, 0, 524292, 1, 0, 524291, 1, 0, 524290, 1, 0, 524289, 1, 0)
script = ExtResource("3_jxprg")

[node name="Wall" type="TileMap" parent="."]
tile_set = SubResource("TileSet_1ll3x")
format = 2
layer_0/tile_data = PackedInt32Array(393225, 0, 0, 327689, 0, 0, 262153, 0, 0, 196617, 0, 0, 131081, 0, 0, 65545, 0, 0, 9, 0, 0, 8, 0, 0, 7, 0, 0, 6, 0, 0, 5, 0, 0, 4, 0, 0, 3, 0, 0, 2, 0, 0, 1, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 524297, 0, 0, 458761, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(173, 73)
zoom = Vector2(3, 3)

[node name="Robot" type="CharacterBody2D" parent="."]
position = Vector2(72, 72)
script = ExtResource("4_ni6ue")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Robot"]
shape = SubResource("RectangleShape2D_wlo6i")

[node name="Character" parent="Robot" instance=ExtResource("5_v0msi")]
rotation = 0.0174533
frame = 0

[node name="CanvasLayer" parent="." instance=ExtResource("5_tmyyi")]

[node name="Left" parent="CanvasLayer" index="0"]
offset_left = 224.0
offset_top = 86.0
offset_right = 247.0
offset_bottom = 117.0

[node name="Right" parent="CanvasLayer" index="1"]
offset_left = 290.0
offset_top = 84.0
offset_right = 313.0
offset_bottom = 115.0

[node name="Up" parent="CanvasLayer" index="2"]
anchors_preset = -1
offset_left = 255.0
offset_top = 54.0
offset_right = 278.0
offset_bottom = 85.0

[node name="Down" parent="CanvasLayer" index="3"]
offset_left = 259.0
offset_top = 89.0
offset_right = 282.0
offset_bottom = 120.0

[node name="Collision" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2(106, 72)
shape = SubResource("RectangleShape2D_5ntqp")

[connection signal="pressed" from="CanvasLayer/Left" to="Robot" method="_on_left_pressed"]
[connection signal="pressed" from="CanvasLayer/Right" to="Robot" method="_on_right_pressed"]
[connection signal="pressed" from="CanvasLayer/Up" to="Robot" method="_on_up_pressed"]
[connection signal="pressed" from="CanvasLayer/Down" to="Robot" method="_on_down_pressed"]

[editable path="Robot/Character"]
[editable path="CanvasLayer"]
